--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,10 @@
-asgiref==3.4.1
-attrs==20.3.0
-Django==3.2.7
-gitdb==4.0.9
-gitdb2==4.0.2
-GitPython==3.1.26
-humanfriendly==10.0
-Markdown==3.3.4
-markdown-it-py==0.5.8
-markdown2==2.4.1
-mccabe==0.6.1
+asgiref==3.5.1
+Django==4.0.4
+mccabe==0.7.0
+numpy==1.21.2
 Pillow==9.1.0
 pytz==2022.1
 six==1.16.0
-smmap==5.0.0
 sqlparse==0.4.2
-urllib3==1.26.7
-wrapt==1.13.3
+urllib3==1.26.9
+wrapt==1.14.1
