--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.1
+dj-database-url==0.5.0
 Django==4.0.4
+gunicorn==20.1.0
 mccabe==0.7.0
 numpy==1.21.2
 Pillow==9.1.0
+psycopg2-binary==2.9.3
 pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.9
+whitenoise==6.0.0
 wrapt==1.14.1
